--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   image_picker: ^1.0.5
   firebase_storage: ^11.2.8
   cached_network_image: ^3.3.0
-  geolocator: ^10.0.1
+  geolocator: ^10.1.0
   quiver: ^3.2.1
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
