--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_storage: ^11.2.8
   cached_network_image: ^3.3.0
   geolocator: ^10.1.0
+  google_maps_flutter: ^2.5.0
+  geocoding: ^2.1.1
+  google_maps_place_picker_mb: ^3.1.2
+  google_places_flutter: ^2.0.6
   quiver: ^3.2.1
   url_launcher: ^6.2.2
 
