--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,26 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
-  image_picker: ^1.0.5
+  permission_handler: ^9.2.0
+  video_player: ^2.7.0
+  sqflite: ^2.2.8+4
+  path_provider: ^2.0.15
+  fl_chart: ^0.62.0
+
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
   firebase_storage: ^11.2.8
+
+  file_picker: ^6.1.1
+
+  shared_preferences: ^2.2.0
+  audioplayers: ^5.1.0
+  flutter_tts: ^3.8.1
+  google_fonts: ^6.1.0
+  percent_indicator: ^3.4.0
+
+  image_picker: ^1.0.5
   cached_network_image: ^3.3.0
   geolocator: ^10.1.0
   google_maps_flutter: ^2.5.0
@@ -46,23 +64,12 @@ dependencies:
   google_places_flutter: ^2.0.6
   quiver: ^3.2.1
   url_launcher: ^6.2.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  video_player: ^2.7.0
-  sqflite: ^2.2.8+4
-  path_provider: ^2.0.15
-  fl_chart: ^0.62.0
-  cloud_firestore: ^4.8.4
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
-  shared_preferences: ^2.2.0
-  audioplayers: ^5.1.0
-  flutter_tts: ^3.8.1
-  google_fonts: ^6.1.0
-  percent_indicator: ^3.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
